sumo/tests/duarouter/trips/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a trip is empty.
Error: Invalid departLane definition for vehicle '';
 must be one of ("random", "free", "allowed", "best", or an int>=0)
Quitting (on error).
